@@ -7094,7 +7094,7 @@ rendered at POS, return nil."
 				time-string))
       time-string)))
 
-(defmacro twittering-render-a-field (pos field-id generator)
+(defmacro twittering-render-a-field (pos field-id generator &optional without-separator)
   "Render a field on the current buffer managed by `twittering-mode'.
 Insert a field to the position pointed by FIELD-ID. The position is searched
 after POS. The string for the field is generated by the GENERATOR expression.
@@ -7114,7 +7114,9 @@ This function returns the position where the next status should be inserted."
 	     nil)))
      (unless (twittering-field-id= field-id (get-text-property pos 'field))
        (let ((formatted-status (propertize ,generator 'field ,field-id))
-	     (separator "\n"))
+	     (separator (if ,without-separator
+			    ""
+			  "\n")))
 	 (goto-char pos)
 	 (if (eq pos (point-max))
 	     ;; Use `insert' only if no statuses are rendered on the below.
